# document-merger

./: .gitignore  Config.py  Converter.py  Pipfile  README.md  StatusTable.py  combine_pdfs.py  config.py  conversion_diagram.drawio  document_merger.py  example_usage.py  pyproject.toml  requirements.txt
src/document-merger/: Converter.py  DocumentMerger.py  document_merger.py
src/document_merger/: Converter.py  DocumentMerger.py  DocumentMergerConfig.py  StatusTable.py  __init__.py
